css/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}


html,
body {
  position: relative;
  height: 100%;
  overflow-x: hidden;
  overflow-y: hidden;
}

body {
  background: #000000;
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 14px;
  color: #000;
  /* margin: 0;
  padding: 0; */
}

/* Prevent any scrollbars */
::-webkit-scrollbar {
  display: none;
}

.swiper {
  width: 100%;
  height: 100%;
}

.swiper-slide {
  background-color: black;
  height: 100svh;
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Title Row */
.title-row {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 10px;
  cursor: default;
  overflow: visible;
}

/* Close Button Styles */
.close-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 28px;
  height: 28px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  position: absolute;
  left: 9px;
  cursor: pointer;
  border: none;
  position: relative; 
}

/* The lines of the "X".*/
.close-btn .x-line::before,
.close-btn .x-line::after {
  content: "";
  position: absolute;
  width: 18px; 
  height: 2px; 
  background-color: white; 
  top: 50%; 
  left: 50%; 
  transform-origin: center;
}

/* First line of the 'X' */
.close-btn .x-line::before {
  transform: translate(-50%, -50%) rotate(45deg); 
}

/* Second line of the 'X' */
.close-btn .x-line::after {
  transform: translate(-50%, -50%) rotate(-45deg); 
}

/* Increases the clickable area of buttons to prevent accidently turning the title row on or off  */
.close-btn::before {
  content: "";
  position: absolute;
  top: -10px;
  bottom: -10px;
  left: -10px;
  right: -10px;
  background: transparent;
}

.title-row .close-btn,
.title-row .options-btn {
  position: absolute;
}

.pencil-title-row {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 28px;
}

.pencil-container {
  position: relative; 
  display: inline-block;
  cursor: pointer; 
}

/* Increases the clickable area of buttons to prevent accidently turning the title row on or off  */
.pencil-container::before, .title-row .add-new-caption::before {
  content: '';
  position: absolute;
  top: -14px;   
  bottom: -14px; 
  left: -14px;   
  right: -10px;  
  /* pointer-events: auto; */
  z-index: 100;
}

.title-row .pencil {
  filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5)) drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.3));
  cursor: pointer;
  height: 18px;
  width: auto;
  margin-right: -14px; 
  position: relative;
  z-index: 200;
}

.title-row .add-new-caption {
  position: relative;
  cursor: pointer;
  z-index: 200;
  display: inline-block; 
  padding: 14px;
}

.title-row .media-item-title {
  font-weight: 400;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: white;
  letter-spacing: 0.04rem;
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 2px 2px 4px rgba(0, 0, 0, 0.3);
  margin-left: 10px;
  margin-right: 10px;
}

.options-btn {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 28px;
  height: 28px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  position: absolute;
  right: 9px;
  cursor: pointer;
  border: none;
  gap: 0.158rem;
}

/* Increases the clickable area of buttons to prevent accidently turning the title row on or off */
.title-row .options-btn::before {
  content: '';
  position: absolute;
  top: -10px;  
  bottom: -10px; 
  left: -10px;  
  right: -10px;  
  background: transparent;
  z-index: 100;  
}

.dot {
  width: 4px;
  height: 4px;
  background-color: white;
  border-radius: 50%;
}

/* Bottom Footer */
.title-row-bottom {
  height: 60px;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: -18px;
}

.number-of-items-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 2px;
  height: 28px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 14px;
  position: absolute;
  right: 9px;
  border: none;
}

.number-of-items-text {
  color: white;
  letter-spacing: 0.09rem;
  padding-right: 8px;
  padding-left: 8px;
  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 2px 2px 4px rgba(0, 0, 0, 0.3);
  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
}

.landscape-img {
  width: 100vw;
  height: auto;
  max-height: 100svh;
  object-fit: contain;
  display: block;
}

/* Vertical Swiper */
/* Changes color of all pagination bullets*/
.swiper-pagination-bullet {
  background-color: rgba(255, 255, 255, 0.9);
  border: 1px solid rgba(178, 178, 178, 0.9);
}

/* Changes color of the active pagination bullet */
.swiper-pagination-bullet-active {
  background-color: #ffffff;
}

/* Youtube Videos */
.youtube-video-iphone-image-container {
  position: relative;
  width: 100%; /* Matches the container to the image width */
  max-width: 100vw; 
  display: flex;
  justify-content: center;
  align-items: center;
}

.youtube-landscape {
  width: 100%;
  height: auto;
  max-width: none;
  object-fit: cover;
}

.centered-video_play-icon {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 68px;
  height: 68px;
  opacity: 0.9;
  object-fit: contain;
  cursor: pointer;
}

/* Link Layout for mobile */
.link-img {
  width: 100%;
  height: auto;
  max-height: 55svh;
  object-fit: cover;
  display: block;
  position: fixed;
  /* top: 48px; */
  left: 0;
  right: 0;
  margin: 0 auto;
}

.link-container {
  /* background-color: white; */
  background-color: black;
  width: 100vw;
  position: relative;
  padding-left: 20px;
  margin-top: calc(55svh); 
  height: calc(100svh - 55svh); 
  overflow-y: auto;
}

.link-title,
.link-description {
  text-align: left;
  /* color: black; */
  color: white;
  padding-right: 20px;
  margin-left: 4px;
}

.link-title {
  font-weight: bold;
  letter-spacing: 0.2px;
  margin-top: 3svh;
}

.link-description {
  letter-spacing: 0.1px;
}


.link-clickable-text-wrapper {
  margin-top: 20px; 
  margin-bottom: 16px; 
}

/* Need to use class names that Adam is already using. */
.link-clickable-text {
  display: inline;
  text-decoration: none;
  text-transform: uppercase;
  color: #808080;
  margin-left: 4px;
  letter-spacing: 0.1px;
}

.grey_button {
  display: inline-flex;
  align-items: center;
  /* border: 1px solid #d6d6d6; */
  border: 1px solid #696969;
  padding: 6px 16px 6px 10px;
  text-decoration: none;
  /* color: black; */
  color: white;
  /* background: linear-gradient(#ffffff, #f7f2f2); */
  /* background: linear-gradient(#d9d9d9, #cbcbcb); */
  background: none;
  cursor: pointer;
  gap: 5px;
  max-width: 125px;
  width: 100%;
  white-space: nowrap;
  margin-left: 4px;
}

.button-icon {
  width: 16px;
  height: 16px;
  object-fit: contain;
}

.portrait-img {
  height: 100svh; 
  max-height: 100svh;
  width: auto;
  object-fit: cover; 
  display: block;
}

.youtube-portrait {
  max-height: 90svh;
  height: auto;
  width: auto;
  max-width: 100%;
  object-fit: contain;
  margin: 0 auto;
  /* display: block; */
}

.swiper-slide img {
  display: block;
  width: 100%;
}

/* Arrows for horizontal swiping for Navigation and Fade Swiper */
.left-arrow-btn, .right-arrow-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40px;
  height: 40px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;
  border: none;
  z-index: 100;
  transition: opacity 0.3s;
  background-size: 20px 20px; 
  background-position: center;
  background-repeat: no-repeat;
}

/* Increases the clickable area of buttons to prevent accidently turning the title row on or off */
.left-arrow-btn::before,
.right-arrow-btn::before {
  content: '';
  position: absolute;
  top: -20px; 
  bottom: -20px; 
  left: -20px; 
  right: -20px; 
  background: transparent; 
}

.left-arrow-btn {
  left: 9px;
  background-image: url(../assets/64x64_0021_left-arrow-white.png);
  background-position: calc(50% - 2px) center;
}

.right-arrow-btn {
  right: 9px;
  background-image: url("../assets/64x64_0022_right-arrow-white.png");
  background-position: calc(50% + 2px) center; /
}

/* Custom arrows for vertical swiping for Vertical Swiper */
/* Style for the navigation buttons container */
.navigation-buttons {
  position: absolute;
  bottom: 12px; 
  left: 50%;
  transform: translateX(-50%);
  z-index: 100;
  display: block; 
}

/* Arrows for vertical swiping.  I also had up- */
.down-arrow-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 46px;
  height: 46px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  cursor: pointer;
  border: none;
  transition: opacity 0.3s;
  background-size: 23px 23px; 
  background-repeat: no-repeat;
  touch-action: manipulation;
  background-image: url("../assets/64x64_0022_down-arrow-white.png");
  background-position: center 58%;
}

/* Increases clickable area of buttons to prevent accidently turning the title row on or off */
.down-arrow-btn::before {
  content: '';
  position: absolute;
  top: -20px; 
  bottom: -20px; 
  left: -20px; 
  right: -20px; 
  background: transparent; 
}

/* Hide the title-row when clicking on page */
.hidden-title-row {
  display: none;
}

/* Media query to adjust for wider screens (around 500px and above)  NOTE max-width 55svh needs tested on older phones that have screen heights under 600px */
/* @media (orientation: landscape) {
  .portrait-img {
    height: 100svh;  
    width: auto; 
    max-width: 55svh; 
    object-fit: cover; /
  }
} */

@media only screen and (min-width: 975px) {
  .link-main-page-container {
    display: flex;
    align-items: flex-start;
    gap: 20px;
    /* background-color: white; */
    background-color:black;
    width: 90%;
  }

  .image-container-for-portraits-desktop-link {
    flex: 1;
  }

  .link-img {
    width: 100%;
    height: auto;
    display: block;
    object-fit: cover;
    position: initial;
    max-height: initial;
    top: initial;
    left: initial;
    right: initial;
    margin: initial;
  }

  .link-container {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width: initial;
    position: initial;
    padding: initial;
    padding-right: 14px;
    margin-top: initial;
    height: initial;
    margin-left: initial;
  }
}

